# wgpu_toy_3d_game_engine

./: Cargo.toml  Readme.md  build.rs
resources/: floor.mtl
src/: basic_shader.wgsl  camera.rs  ecs.rs  instance.rs  light.rs  main.rs  model.rs  renderer.rs  texture.rs  transform.rs  uniforms.rs  util.rs  vertex.rs  wgpu-tutorial-LICENSE.md
src/shaders/: draw_light_box.wgsl  triangle_color_shader.wgsl  uniform_buffer_instances_depth_shader.wgsl  uniform_buffer_instances_diffuse_specular_normalmap_shader.wgsl  uniform_buffer_instances_diffuse_specular_shader.wgsl  uniform_buffer_instances_light_normal_shader.wgsl  uniform_buffer_instances_light_shader.wgsl  uniform_buffer_instances_shader.wgsl  uniform_buffer_model_shader.wgsl  uniform_buffer_shader.wgsl
src/shaders/wgpu_0.12/: fragment_shader.wgsl  fragment_shader_light_box.wgsl  vertex_shader.wgsl  vertex_shader_light_box.wgsl
src/shaders/wgpu_0.13/: fragment_shader.wgsl  fragment_shader_light_box.wgsl  vertex_shader.wgsl  vertex_shader_light_box.wgsl
