[package]
name = "wgpu_custom_engine"
version = "0.1.0"
authors = ["Rasmus Thorsøe <rt071195@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.9"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
tobj = "3.2.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
