[package]
name = "wgpu_custom_engine"
version = "0.1.0"
authors = ["Rasmus Thorsøe <rt071195@gmail.com>"]
edition = "2021"
resolver = "2"
description = "A toy 3D Engine based on wgpu"
license = "MIT"
repository = "https://github.com/rasmustrew/wgpu_custom_engine"
readme = "Readme.md"
keywords = ["3D", "Render", "Game"]
categories = ["3D"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.23"
winit = "0.27.0"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.17.0"}
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
tobj = "3.2.0"
legion = "0.4.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
